# yroki

./: .flake8  README.md  pyproject.toml
my_project/: .flake8  .gitignore  README.md  pyproject.toml
my_project/src/: masks.py  processing.py  widget.py
my_project/tests/: test_masks.py  test_processing.py  test_widget.py  tests_masks.py
