[project]
name = "rabota-na-dz"
version = "0.1.0"
description = "Мой учебный проект 10,1"
authors = [
    {name = "Semen"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "requests (>=2.34.2,<3.0.0)"
]
