[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Puprudnikov.S.S emel=prudnikov.s.s@yandex.ru"]

[tool.poetry.dependencies]
python = "^3.14.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0"
black = "^24.0"
isort = "^6.0"
mypy = "^1.9"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# Конфигурация black
[tool.black]
line-length = 119
target-version = ['py314']

# Конфигурация isort
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119
known_first_party = "src"

# Конфигурация mypy
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
no_implicit_optional = true