[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "Виджет для отображения последних успешных банковских операций клиента"
authors = ["Semen <prudnikov.s.s@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.14.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
known_first_party = "src"
skip_glob = ["tests/*", "venv/*"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
exclude = [
    "^tests/",
    "^venv/"
]

[tool.flake8]
max-line-length = 119
exclude = .git,__pycache__,tests/,venv/,build/
ignore = E203, W503
select = B,C,E,F,W,T4,B9
per-file-ignores =
    __init__.py:F401


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "tests_*.py"
python_classes = "Test*"
python_functions = "test_*"
